<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_marginTop="5dp"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/card_margin"
        android:layout_marginLeft="@dimen/card_margin"
        android:layout_marginRight="@dimen/card_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            style="@style/Widget.CardContent_without_padding"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/appilance_name"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textSize="25dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/device_name"/>
                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/time"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textSize="25dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/time"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_height="wrap_content"
                    android:text="@string/update_request"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/update_rquest"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_height="wrap_content"
                    android:text="@string/request"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_height="wrap_content"
                    android:text="@string/status"/>
                <TextView
                    android:layout_width="0dp"
                    android:id="@+id/status"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_height="wrap_content"
                    android:text="@string/active"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_height="wrap_content"
                    android:text="@string/date"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/date"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:textSize="20dp"
                    android:fontFamily="sans-serif-condensed"
                    android:layout_height="wrap_content"
                    android:text="@string/date_example"/>

            </LinearLayout>



           </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>